* Dec 19 2000 hship

Fix a bug in VlibBeans where the Operations.getPerson() method built invalid SQL
for the query.
Fill out much more of the functionlity of Vlib/JSP, and add closure (links point
to a simply Not Yet Implemented page).

* Dec 13 2000 hship

Lots of changes in the Vlib to make use of the new validating text field components.
Remove lots of unneeded package Makefiles.

* Dec 11 2000 hship

Fix Makefiles for the new usage of the JBE_CANONICALIZE macro.

* Nov 22 2000 hship

Update Virtual Library documentation.

* Nov 20 2000 hship

Minor fixes to Makefiles; especially to make them work correctly before the JBE Util class
has been compiled.

* Nov 20 2000 hship

Final documentation changes for release 0.2.6.

* Nov 17 2000 hship

Convert the VlibBeans over to jBoss.
Fix some minor VlibBeans bugs.
Add a few key classes from ServletUtils to Vlib.

* Nov 7 2000 hship

Convert the Vlib demo over to using Jetty.
Delete the old "blue border" demo.

* Nov 1 2000 hship

More changes to the Tutorial, to take advantage of Tapestry's switch-over to Servlet 2.2.

* Nov 1 2000 hship

Convert the Tutorial over to using Jetty.

* Nov 1 2000 hship

Remove dependecy on IBM's JLog toolkit (to be replaced with Log4J, which is open source).
Remove references to PrimixFoundation.jar, which has been merged into Tapestry.jar.

* Oct 6 2000 hship

Create better components for linking to Person and ViewBook pages.

* Oct 4 2000 hship

Make some changes for recent changes to the Tapestry API.

* Sep 15 2000 hship

More work on the JSP Vlib, adding new pages and exception handling, and making
the servlets responsible for writting links.

* Sep 14 2000 hship

Begin work on the JSP version of the Primix Virtual Library.

* Sep 12 2000 hship

Add the ShowInspector component to the tutorial Border and the Vlib Border.
Fix some bugs that have cropped up in the blue border demo.

* Sep 8 2000 hship

Modify the blue-border demo to work properly in a standalone mode.
