@@ -11,22 +11,22 @@
 	</tr>
 
 	<tr>
-		<th>Last Name</th>
+		<th><jwc id="labelLastName"/></th>
 		<td><jwc id="inputLastName"/></td>
 	</tr>
 
 	<tr>
-		<th>E-mail</th>
+		<th><jwc id="labelEmail"/></th>
 		<td><jwc id="inputEmail"/></td>
 	</tr>
 
 	<tr>
-		<th>Password</th>
+		<th><jwc id="labelPassword1"/></th>
 		<td><jwc id="inputPassword1"/></td>
 	</tr>
 
 	<tr>
-		<th>Password (again)</th>
+		<th><jwc id="labelPassword2"/></th>
 		<td><jwc id="inputPassword2"/></td>
 	</tr>
 
